<resources>
    <string name="app_name">whodgson-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="button_view_log">View Log</string>
    <string name="button_add_log_entry">Add New Log Entry</string>
    <string name="button_exit">Exit</string>
    <string name="title_activity_view_log">ViewLog</string>
    <string name="title_activity_add_log_entry">AddLogEntry</string>
    <string name="date_hint">yyyy-mm-dd</string>
    <string name="date_text">Date:</string>
    <string name="station_hint">Station</string>
    <string name="station_text">Station:</string>
    <string name="odometer_hint">Kilometers</string>
    <string name="odometer_text">Odometer Reading:</string>
    <string name="fuel_grade_hint">Fuel Grade</string>
    <string name="fuel_grade_text">Fuel Grade:</string>
    <string name="fuel_amount_hint">Liters</string>
    <string name="fuel_amount_text">Fuel Amount:</string>
    <string name="fuel_unit_cost_hint">Cents/L</string>
    <string name="fuel_unit_cost_text">Fuel Unit Cost:</string>
    <string name="fuel_cost_hint">Dollars</string>
    <string name="fuel_cost_text">Fuel Cost:</string>
    <string name="add_to_log_add_to_log_button_text">Add to Log</string>
    <string name="add_to_log_cancel_log_button_text">Cancel</string>
</resources>
