<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="william.whodgson_fueltrack.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button android:id="@+id/button_view_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_view_log" />

    <Button android:id="@+id/button_add_log_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_log_entry" />

    <Button android:id="@+id/button_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit" />
</LinearLayout>
